fix image spacing, style title

--- a/src/assets/css/components/prod-feature.css
+++ b/src/assets/css/components/prod-feature.css
@@ -102,4 +102,5 @@
   }
   justify-content: center;
   align-items: center;
+  gap: var(--space-56);
 }
